# Automacao-CODATA

./: README.md  browser_manager.py  main.py  main_altered.py  pyproject.toml  replit.nix  requirements.txt  xlsx_handler.py
csv/: csv_reader.py  csv_writer.py  xlsx2csv.py
test_files/: .xlsx  SEFAZ- PLANILHA DE CONTROLE DOS LEVANTAMENTOS.xlsx  SEFAZ-_PLANILHA_DE_CONTROLE_DOS_LEVANTAMENTOS.xlsx  adriana.py
