[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Arthur Tamon Souza <arthuramon.souza93@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
numpy = "^1.26.3"
openpyxl = "^3.1.2"
pandas = "^2.2.0"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
replit = "^3.6.1"
flask = "^3.0.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
